# Taller4

./: Taller4.ipynb  main.py  pyproject.toml
